--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 # .gitignore
+# Dependencias
 node_modules/
+
+# Build
+dist/
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+
+# Editor
+.vscode/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+
